k8s/apm-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apm-server
  namespace: davtroelkjs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apm-server
  template:
    metadata:
      labels:
        app: apm-server
    spec:
      containers:
        - name: apm-server
          image: docker.elastic.co/apm/apm-server:8.11.0
          ports:
            - containerPort: 8200
---
apiVersion: v1
kind: Service
metadata:
  name: apm-server
  namespace: davtroelkjs
spec:
  selector:
    app: apm-server
  ports:
    - port: 8200
      targetPort: 8200
