k8s/spark-master copy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-master
  namespace: davtroelkjs
  labels:
    app: website-db-vault-kaf-redis-arg-kust-kyv-elk-apm-sprig-spar2
    component: spark-master
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: website-db-vault-kaf-redis-arg-kust-kyv-elk-apm-sprig-spar2
      component: spark-master
  template:
    metadata:
      labels:
        app: website-db-vault-kaf-redis-arg-kust-kyv-elk-apm-sprig-spar2
        component: spark-master
    spec:
      containers:
        - name: spark-master
          image: bitnami/spark:3.5.0
          imagePullPolicy: IfNotPresent
          command:
            [
              "/opt/spark/bin/spark-class",
              "org.apache.spark.deploy.master.Master",
              "-h",
              "0.0.0.0",
            ]
          ports:
            - containerPort: 7077
              name: master
            - containerPort: 8080
              name: webui
            - containerPort: 4040
              name: jobui
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
          readinessProbe:
            tcpSocket:
              port: 7077
            initialDelaySeconds: 60
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: spark-master
  namespace: davtroelkjs
  labels:
    app: website-db-vault-kaf-redis-arg-kust-kyv-elk-apm-sprig-spar2
    component: spark-master
spec:
  ports:
    - port: 7077
      targetPort: 7077
      name: master
    - port: 8080
      targetPort: 8080
      name: webui
  selector:
    app: website-db-vault-kaf-redis-arg-kust-kyv-elk-apm-sprig-spar2
    component: spark-master
