k8s/spark-master.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-master
  namespace: davtroelkjs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark-master
  template:
    metadata:
      labels:
        app: spark-master
    spec:
      containers:
      - name: spark-master
        image: bitnami/spark:3.5.0
        command: ["/opt/bitnami/spark/bin/spark-class"]
        args:
          - "org.apache.spark.deploy.master.Master"
          - "--host"
          - "spark-master"
          - "--port"
          - "7077"
          - "--webui-port"
          - "8080"
        ports:
            - containerPort: 7077
              name: spark
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: spark-master-service
  namespace: davtroelkjs
spec:
  selector:
    app: spark-master
  ports:
    - port: 7077
      targetPort: 7077
      name: spark
    - port: 8080
      targetPort: 8080
      name: http
